--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:id="@+id/article_image"
-        android:contentDescription="article_main_page"
+        android:contentDescription="@string/details_image_contentdesc"
         android:scaleType="centerCrop"
         tools:background="@color/detail_image_placeholder_color" />
     />
@@ -27,7 +27,7 @@
         android:padding="@dimen/small_padding"
         android:id="@+id/article_title"
         android:background="@color/detail_title_highlight_color"
-        android:text="place holder"/>
+        android:text="@string/place_holder"/>
 
 
     <android.support.v4.widget.NestedScrollView
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/article_description"
                 android:layout_margin="@dimen/small_margin"
-                android:text="Source URL"
+                android:text="@string/Source_URL"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/normal_text_size"
                 android:textStyle="italic|bold" />
