--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -70,7 +70,7 @@
     <TextView
         android:visibility="gone"
         android:id="@+id/empty_widget_tv"
-        android:text="placeholder"
+        android:text="@string/place_holder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </FrameLayout>
